[tool.poetry]
name = "bahi1011-82440-a5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bahi1011_82440_a5"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
